--- a/movies-api/package.json
+++ b/movies-api/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "dedupe": "^3.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
