--- a/movies-api/.eslintrc.json
+++ b/movies-api/.eslintrc.json
@@ -1,7 +1,9 @@
 {
     "env": {
-        "browser": true,
-        "es2021": true
+        "commonjs": true,
+        "es2021": true,
+        "node": true,
+        "mocha": true
     },
     "extends": "eslint:recommended",
     "parserOptions": {
