--- a/movies-api/package.json
+++ b/movies-api/package.json
@@ -4,22 +4,46 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node index.js"
+    "build": "npm-run-all clean compile:all",
+    "clean": "rimraf ./build && mkdir build",
+    "compile:moviemodels": "babel ./api/movies --out-dir build/api/movies",
+    "compile:usermodels": "babel ./api/users --out-dir build/api/users",
+    "compile:models": "npm-run-all compile:moviemodels compile:usermodels",
+    "compile:seed": "babel ./seedData --out-dir build/seedData",
+    "compile:routes": "babel ./routes --out-dir build/routes ",
+    "compile:app": "babel index.js --out-dir build/",
+    "compile:db": "babel db.js --out-dir build/",
+    "compile:copy": "cp -r ./node_modules/ build/node_modules && cp -r ./public build/public",
+    "compile:all": "npm-run-all compile:models compile:seed compile:app compile:db ",
+    "postinstall": "rimraf ./build && npm run compile:all",
+    "start": "nodemon --exec babel-node index.js",
+    "test": "cross-env NODE_ENV=test mocha "
   },
   "author": "Jiaqi Gu",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/node": "^7.6.3",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/register": "^7.0.0",
     "babel-eslint": "^10.1.0",
-    "babel-preset-env": "^1.7.0",
+    "chai": "^4.0.2",
+    "cross-env": "^6.0.3",
     "eslint": "^7.14.0",
-    "nodemon": "^2.0.6"
+    "mocha": "^8.1.3",
+    "nodemon": "^2.0.6",
+    "supertest": "^4.0.2",
+    "npm-run-all": "^4.1.5"
   },
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
-    "dedupe": "^3.0.2",
+    "@babel/runtime": "^7.6.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "loglevel": "^1.7.1",
+    "bcrypt-nodejs": "0.0.3",
+    "dedupe": "^3.0.2",
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
