--- a/reactApp/package.json
+++ b/reactApp/package.json
@@ -3,11 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^4.11.2",
+    "bootstrap": "^4.0.0-alpha.6",
+    "dotenv": "^8.2.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^3.29.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.4"
+    "react-scripts": "3.4.4",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,6 +34,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
-  ,"proxy":"http://localhost:8080"
+  },
+  "proxy": "http://localhost:8080"
 }
