--- a/reactApp/package.json
+++ b/reactApp/package.json
@@ -7,7 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.11.2",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
     "react": "^16.13.1",
     "react-bootstrap": "^0.32.1",
