--- a/movies-api/package.json
+++ b/movies-api/package.json
@@ -39,14 +39,16 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.6.3",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "loglevel": "^1.7.1",
     "bcrypt-nodejs": "0.0.3",
     "dedupe": "^3.0.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "helmet": "^4.3.1",
     "jsonwebtoken": "^8.5.1",
+    "loglevel": "^1.7.1",
     "mongoose": "^5.11.8",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
