--- a/movies-api/.gitlab-ci.yml
+++ b/movies-api/.gitlab-ci.yml
@@ -44,8 +44,6 @@ test_api:
 
 deploy_staging:
   image: ruby:latest
-  only:
-    - develop
   stage: staging
   before_script:
     - apt-get update -qy
@@ -56,12 +54,22 @@ deploy_staging:
     - echo "Deployed to staging server"
 
 
-deploy:
+continuous_delivery:
   stage: deploy
   only:
     - develop
-    - master
-  script:
+  script:  
+    - npm i
+    # your build command
+    - npm run build
+    - npx netlify-cli deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_AUTH_TOKEN --prod
+  when: manual
+
+continuous_deployment:
+  stage: deploy
+  only:
+     - master
+  script:  
     - npm i
     # your build command
     - npm run build
