--- a/movies-api/.mocharc.yml
+++ b/movies-api/.mocharc.yml
@@ -1,5 +1,6 @@
 file:
     - 'tests/functional/api/movies/index.js'
+    - 'tests/functional/api/people/index.js'
     - 'tests/functional/api/users/index.js'
 require: '@babel/register'
 exit: true
