--- a/movies-api/.babelrc
+++ b/movies-api/.babelrc
@@ -4,6 +4,7 @@
 
     ],
     "plugins": [
-      ["@babel/transform-runtime"]
+      ["@babel/transform-runtime"],
+      ["@babel/plugin-proposal-json-strings"]
   ]
 }
