--- a/movies-api/.mocharc.yml
+++ b/movies-api/.mocharc.yml
@@ -2,6 +2,7 @@ file:
     - 'tests/functional/api/movies/index.js'
     - 'tests/functional/api/people/index.js'
     - 'tests/functional/api/users/index.js'
+    - 'tests/functional/api/genres/index.js'
 require: '@babel/register'
 exit: true
 timeout: 4000
