Agile modification and agile README added

--- a/movies-api/package.json
+++ b/movies-api/package.json
@@ -12,14 +12,13 @@
     "compile:peoplemodels": "babel ./api/people --out-dir build/api/people",
     "compile:tmdb": "babel ./api/tmdb-api --out-dir build/api/tmdb-api",
     "compile:models": "npm-run-all compile:moviemodels compile:usermodels compile:genresmodels compile:peoplemodels compile:tmdb",
-    "compile:swagger": "babel swagger.json --out-dir build/",
     "compile:authenticate": "babel ./authenticate --out-dir build/authenticate",
     "compile:seed": "babel ./seedData --out-dir build/seedData",
     "compile:routes": "babel ./routes --out-dir build/routes ",
     "compile:app": "babel index.js --out-dir build/",
     "compile:db": "babel db.js --out-dir build/",
     "compile:copy": "cp -r ./node_modules/ build/node_modules && cp -r ./public build/public",
-    "compile:all": "npm-run-all compile:models compile:seed compile:authenticate compile:app compile:swagger compile:db ",
+    "compile:all": "npm-run-all compile:models compile:seed compile:authenticate compile:app compile:db compile:copy",
     "postinstall": "rimraf ./build && npm run compile:all",
     "start": "nodemon --exec babel-node index.js",
     "test": "cross-env NODE_ENV=test mocha "
