--- a/movies-api/.gitlab-ci.yml
+++ b/movies-api/.gitlab-ci.yml
@@ -64,7 +64,7 @@ continuous_delivery:
     - apt-get install -y ruby-dev
     - gem install dpl
   script:  
-    - dpl --provider=heroku --app=$HEROKU_APP_NAME_STAGING --api-key=$HEROKU_API_KEY
+    - dpl --provider=heroku --app=$HEROKU_APP_NAME_PRODUCTION --api-key=$HEROKU_API_KEY
     - echo "Deployed to staging server"
   when: manual
 
@@ -78,5 +78,5 @@ continuous_deployment:
     - apt-get install -y ruby-dev
     - gem install dpl
   script:  
-    - dpl --provider=heroku --app=$HEROKU_APP_NAME_STAGING --api-key=$HEROKU_API_KEY
+    - dpl --provider=heroku --app=$HEROKU_APP_NAME_PRODUCTION --api-key=$HEROKU_API_KEY
     - echo "Deployed to staging server"
